[build-system]
requires = ["setuptools >= 30.3.0", "wheel"]

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
  (
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.tox
      | \.venv
      | _build
      | build
      | dist
    )/
      | src/x_to_nwb/_version.py
      | versioneer.py
  )
  '''
